=== 0.9.2 (2018-04-23) ===
CHANGED: upgraded dependency versions

=== 0.9.1 (2018-02-13) ===
FIXED: to check failure limit on sign/verify

=== 0.9.0 (2018-02-12) ===
Initial version