@@ -32,7 +32,7 @@ module.exports = {
     specDirs : path.resolve( __dirname, '..', 'specs' ),
 
     PING_VERSION: '1.0',
-    FTN13_VERSION: '0.3',
+    FTN13_VERSION: '1.0',
 
     DB_IFACEVER : 'futoin.db.l2:1.0',
 
