@@ -1,3 +1,6 @@
+=== (next)
+CHANGED: to use FTN13 v1.0 specs instead of v0.3
+
 === 0.9.2 (2018-04-23) ===
 CHANGED: upgraded dependency versions
 
